<resources>
    <string name="app_name">RAMADHANEase</string>
    <string name="doa">اللَّهُمَّ أَهِلَّهُ عَلَيْنَا بِالْيُمْنِ وَالإِيمَانِ وَالسَّلامَةِ وَالإِسْلامِ رَبِّي وَرَبُّكَ اللَّهُ\n\nArtinya : Ya Allah, hilalkanlah bulan ini pada kami dengan membawa berkah, iman, keselamatan, dan Islam. Rabbku dan Rabbmu adalah Allah</string>
    <string name="doa2">اللَّهُمَّ لَكَ صُمْتُ وَبِكَ آمَنْتُ وَعَلَى رِزْقِكَ أَفْطَرْتُ\n\nArtinya : Ya Allah, untuk-Mu aku berpuasa, dengan-Mu aku beriman, dan atas rezeki-Mu aku berbuka</string>
    <string name="doa3">أَفْطَرَ عندَكُمُ الصَّالِمُونَ وَأَكَلَ طَعَامَكُمُ الأَبْرَارُ وَصَلَّتْ عَلَيْكُمُ المَلائِكَةُ\n\nArtinya : Orang-orang yang berpuasa telah berbuka di rumah kalian dan orang-orang baik telah mengkonsumsi makanan kalian, dan malaikat pun mendoakan kalian</string>
    <string name="doa4">اللَّهُمَّ إِنَّكَ عَفُوٌّ تُحِبُّ الْعَفْوَ فَاعْفُ عَنِّى\n\nArtinya : Ya Allah, sesungguhnya Engkau Maha Pengampun dan suka mengampuni. Karena itu, ampunilah aku</string>
    <string name="doa5">اللَّهُمَّ اجْعَلْنَا بِالإيْمَانِ كَامِلِيْن وَلِلفَرَائِضِ مُؤَدِّيْنِ وَلِلصَّلاةِ حَافِظِيْنِ وَلِلزَّكَاةِ فَاعِلِيْن وَلَمِا عِنْدَكَ طَالِبِيْنِ وَلِعَفْوكَ رَاجِيْنِ وَبِالْهُدَي مُتَمَسِّكِين وَعَن اللَّغْوِ مُعْرِضِيْنِ وَفِي الدُّنْيَا زَاهِدِيْن وَفِي الآخِرَةِ رَاغِيين وبالقضَاءِ رَاضِينِ وَلِلنَّعْمَاءِ شَاكِرِيْنِ وَعَلي البَلَاءِ صَابِريْن وَتَحْتَ لِوَاءِ سَيِّدِنَا مُحَمَّدٍ صلى الله عَلَيْهِ وَسَلَّمَ يَوْمَ الْقِيَامَةِ سَائِرِيْنِ وَإِلَى الْحَوْضِ وَارِدِيْنِ وَإِلَى الجَنَّةِ دَاخِلِيْن وَمِنَ النَّارِ نَاجِيْنِ وَعَلَى سَرِيْرِ الكَرَامَةِ قَاعِدِيْنِ وَمِنْ حُوْرٍ عِينٍ مُتَزَوِّحِينِ وَمِنْ سُنْدُسٍ وَاسْتَبْرَقٍ وَدِيْبَاج مُتَلبِّسِيْن وَمِنْ طَعَامِ الجَنَّةِ آكِلِينِ وَمِنْ لَّبَن وَعَسَلٍ مُصَفًّى شاريين بأكْوَابٍ وَأَبَارِيْقَ وَكَأْسٍ مِنْ مَعِينٍ مَعَ الَّذِي أَنْعَمْتَ عَلَيْهِمْ مِنَ النَّبِيِّين وَالصَّدِّيقِينَ وَالشُّهَدَاءِوَالصَّالِحِيْن وَحَسُنَ أُولَئِكَ رَفِيْقًا ذلِكَ الْفَضْلُ مِنَ اللَّهِ وَكَفَى بالله عَلِيْمًا اللَّهُمَّ اجْعَلْنَا فِي لَيْلَةِ هَذا الشَّهْرِ الشَّرِيفَةِ المُبَارَكَةِ مِنَ السُّعَدَاءِ المَقْبُوْلِيْن وَلَا تَجْعَلْنَا مِنَ اْلأَشْقِيَاءِ الْمَرْدُوْدِيْنَ وَصَلَّى اللهُ عَلَى سَيِّدِنَا مُحَمَّدٍ وَآلِهِ وَصَحْبِهِ أَجْمَعِيْنِ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينِ\n\nArtinya : Ya Allah, jadikanlah kami manusia yang senantiasa menyempurnakan iman kami, melaksanakan perintah menjalankan kewajiban-Mu, menjalankan salat, menunaikan zakat, memohon serta mengharap ampunan-Mu, yang berpegang teguh kepada petunjuk (yang Kau berikan), meninggalkan kemungkaran, hidup dengan sederhana di dunia, mengharap surga di akhirat, berpasrah pada takdir, bersyukur pada nikmat dan bersabar atas cobaan di bawah bendera syariat Muhammad SAW pada hari kiamat. Dari ajarannya kami datang, ke surga kami menuju, dan juga kami selamat dari api neraka. Kami duduk di atas kain sutra kemuliaan, kami menikahi bidadari yang cantik dan jelita. Kami memakai pakaian yang terbuat dari permadani, sutra, dan perhiasan mewah lainnya. Kami makan dari masakan yang telah tersedia di surga. Kami meminum madu dan susu dengan menggunakan gelas mewah bersama para nabi, orang jujur, syuhada, orang saleh, dan mereka akan menjadi teman setia di surga kelak. Demikianlah keutamaan dari Allah. Allah Maha Mengetahui atas segala yang dilakukan oleh hamba-Nya. Ya Rabb, jadikan kami pada malam yang mulia dan penuh berkah ini sebagai orang-orang yang senantiasa bahagia dan engkau ampuni. Serta janganlah masukkan kami ke dalam golongan orang-orang yang senantiasa bersedih dan tertolak. Kami senantiasa bersholawat kepada Nabi Muhammad SAW, keluarga, dan sahabat-sahabatnya secara keseluruhan dengan rahmat-Mu, wahai Yang Maha Penyayang dari yang penyayang</string>
    <string name="doa6">للَّهُمَّ إِنِّي أَعُوذُ بِرِضَاكَ مِنْ سَخَطِكَ وَبِمُعَافَاتِكَ مِنْ عُقُوبَتِكَ وَأَعُوذُ بِكَ مِنْكَ لاَ أُحْصِى ثَنَاءً عَلَيْكَ أَنْتَ كَمَا أَثْنَيْتَ عَلَى نَفْسِكَ\n\nArtinya : Ya Allah, aku berlindung dengan ridha-Mu dari kemurkaan-Mu, aku berlindung dengan maaf-Mu dari hukuman-Mu, dan aku berlindung kepada-Mu dari siksa-Mu. Aku tidak bisa menyebut semua pujian kepada-Mu, sebagaimana Engkau memuji diri-Mu sendiri</string>
</resources>