<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".DoanActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <!-- Doa Melihat Hilal -->
        <androidx.cardview.widget.CardView
            android:onClick="expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Melihat Hilal"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Doa Berbuka Puasa -->
        <androidx.cardview.widget.CardView
            android:onClick="doa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Berbuka Puasa"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa2"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Doa Berbuka Bersama -->
        <androidx.cardview.widget.CardView
            android:onClick="doa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Berbuka Bersama"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa3"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Doa Malam Lailatulqadar -->
        <androidx.cardview.widget.CardView
            android:onClick="doa4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Malam Lailatulqadar"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa4"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Doa Shalat Terawih -->
        <androidx.cardview.widget.CardView
            android:onClick="doa5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Shalat Taraweh"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa5"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Doa Shalat Witir -->
        <androidx.cardview.widget.CardView
            android:onClick="doa6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#368946"
            app:cardCornerRadius="6dp"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doa Berbuka Puasa"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/details6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/doa6"
                    android:textSize="15dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>